src/testFunctional/testData/org/intellij/xquery/parser/valid/MarklogicPrivate.xq
declare private variable $x := 'value';
declare private function local:private() {<test/>};
$x