src/testFunctional/testData/org/intellij/xquery/parser/errors/IncompleteFunctionDeclaration.xq
module namespace a = 'a';
declare function t() {};
declare function u() {;
declare function w() ;
declare function x()
declare function y(
declare function z
declare function a() {'a'};